RESOLVED FIXED294713
[GStreamer] Fix crash in event management
https://bugs.webkit.org/show_bug.cgi?id=294713
Summary [GStreamer] Fix crash in event management
Xabier Rodríguez Calvar
Reported 2025-06-18 22:46:39 PDT
.
Attachments
Xabier Rodríguez Calvar
Comment 1 2025-06-18 22:49:34 PDT
EWS
Comment 2 2025-06-19 00:35:23 PDT
Committed 296413@main (15a2108f0346): <https://commits.webkit.org/296413@main> Reviewed commits have been landed. Closing PR #46948 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-06-19 00:36:32 PDT
Note You need to log in before you can comment on or make changes to this bug.