[GStreamer] Fix crash in event management https://bugs.webkit.org/show_bug.cgi?id=294713

Reviewed by Philippe Normand.

We were leaking the ref just in the line above for OOB events which was causing the quirks to try to use a nullptr.

* Source/WebCore/platform/graphics/gstreamer/mse/WebKitMediaSourceGStreamer.cpp:
(webKitMediaSrcSendEvent):

Canonical link: https://commits.webkit.org/296413@main